--- a/style.css
+++ b/style.css
@@ -114,3 +114,74 @@ h4 {
     border: 6px solid aqua;
     background-color: rgba(5, 156, 156, 0.61) ; 
 }
+.sec-4{
+    background-color: rgb(201, 188, 188);
+}
+.parent-6{
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+}
+.parent-6>.child{
+    
+    margin-top: 40px;
+    width: 90px;
+    height: 70px;
+    font-size: 23px;
+    border: 6px solid aqua;
+    background-color: rgba(5, 156, 156, 0.61) ; 
+}
+.sec-5{
+    background-color: rgb(201, 188, 188);
+}
+.parent-7{
+    display: flex;
+}
+.parent-7>.child{
+    margin-left: 240px;
+    margin-top: 40px;
+    width: 90px;
+    height: 70px;
+    font-size: 23px;
+    border: 6px solid aqua;
+    background-color: rgba(5, 156, 156, 0.61) ; 
+}
+.parent-7>.child-hero{
+    margin-left: 40px;
+    margin-top: 40px;
+    width: 220px;
+    height: 70px;
+    font-size: 23px;
+    border: 6px solid aqua;
+    background-color: rgba(5, 156, 156, 0.61) ; 
+}
+.sec-6{
+    background-color: rgb(201, 188, 188);
+}
+.parent-8{
+    display: flex;
+    flex-wrap: wrap;
+}
+.parent-8>.child{
+    margin-left: 240px;
+    margin-top: 40px;
+    width: 90px;
+    height: 70px;
+    font-size: 23px;
+    border: 6px solid aqua;
+    background-color: rgba(5, 156, 156, 0.61) ; 
+}
+.foot{
+    display: flex;
+    background-color: rgb(137, 228, 228);
+    
+}
+.icon a{ color: black;
+   margin-left: 400px;
+   font-size: 23px;
+}
+.icon i{
+    font-size: 32px;
+    padding: 20px;
+}
